# PySdfScad

./: .gitattributes  .gitmodules  404.html  README.md  compile.sh  doc_extra.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
.github/workflows/: qtDeploy.yaml
3D_objects/: index.html
api/: index.html
docs/: 3D_objects.md  api.md  index.md  transformations.md
pysdfscad/: compiler.py  main.py  openscad.lark  openscad_builtins.py
pysdfscad_qtgui/: logWidget.py  main.py  main.ui
search/: search_index.json
tests/: test_geometry.py  test_interpretor.py
tests/data/: involute_gears.scad  progressive.scad
transformations/: index.html
