[tool.poetry]
name = "pysdfscad"
version = "0.1.0"
description = ""
authors = ["Alex Davies <traverse.da@gmail.com>"]
readme = "README.md"

packages = [
    { include = "pysdfscad" },
    { include = "pysdfscad_qtgui" },
]

[tool.poetry.dependencies]
python = "^3.10"
sdf = {git = "https://github.com/fogleman/sdf.git"}
lark = "^1.1.5"
loguru = "^0.6.0"
click = "^8.1.3"
pyqt5 = {version = "^5.15.7", optional = true}
qscintilla = {version = "^2.13.3", optional = true}
pyqtconsole = {version = "^1.2.2", optional = true}
pyqtgraph = {version = "^0.13.1", optional = true}
pyopengl = {version = "^3.1.6", optional=true}

[tool.poetry.extras]
qtgui = ["PyQt5","qscintilla","pysdfscad_qtgui","pyqtgraph","pyopengl"]

[tool.poetry.scripts]
pysdfscad = "pysdfscad.main:main"
pysdfscad_qtgui = { callable = "pysdfscad_qtgui.main:main", extras = ["qtgui"] }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
cx-freeze = "^6.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
